environments/dev-01/thule/thule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thule
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: api.dev.dg-lite.com
    external-dns.alpha.kubernetes.io/ttl: 10
spec:
  tls:
    - secretName: thule
      hosts:
        - api.dev.dg-lite.com
        - api.dg-lite-aws.danward.me
  rules:
    - host: api.dev.dg-lite.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: thule
                port:
                  number: 3000
    - host: api.dg-lite-aws.danward.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: thule
                port:
                  number: 3000
